# etna-cli

./: .gitignore  .gitmodules  CLI.md  Cargo.toml  ETNA.md  PROTOCOL.md  README.md  TODO.md  clean-up.sh  clippy.toml  dist-workspace.toml  empty_metrics.py  etna-installer.sh  migrate_configs.py  plan-dist-manifest.json  steps.sh  tag.sh
.github/workflows/: release.yml
.github/worklows/: release.yml
docs/workloads/: bst.json  rbt.json  stlc.json
etna-vscode/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
etna-vscode/scripts/: install-local.sh
etna-vscode/src/: extension.ts
etna-vscode/src/api/: client.ts  types.ts
etna-vscode/src/codelens/: mutationCodeLensProvider.ts  mutationDecorations.ts
etna-vscode/src/commands/: index.ts  mutationCommands.ts
etna-vscode/src/webview/: messageHandler.ts  webviewManager.ts
etna-vscode/webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
etna-vscode/webview-ui/src/: App.tsx  index.css
examples/: rocq.rs
schemas/: invoke.json  result.json  test.json
src/: cli.rs  config.rs  driver.rs  drivers.rs  experiment.rs  git_driver.rs  lib.rs  main.rs  manager.rs  open_pbt_format.rs  process.rs  property.rs  python_driver.rs  snapshot.rs  store.rs  strategy.rs  workload.rs
src/commands/: bash.rs  experiment.rs  mod.rs  store.rs
src/commands/check/: integrity.rs
src/commands/config/: change_branch.rs  mod.rs  setup.rs  show.rs
src/commands/experiment/: amend_test.rs  list.rs  mod.rs  new.rs  new_experiment.rs  run.rs  run_experiment.rs  show.rs  show_experiment.rs  visualize.rs
src/commands/mutation/: list.rs  mod.rs  reset.rs  set.rs
src/commands/store/: mod.rs  query.rs  remove.rs  write.rs
src/commands/workload/: add_workload.rs  list_workloads.rs  mod.rs  remove_workload.rs
src/drivers/: common.rs  racket.rs  rocq.rs
src/server/: error.rs  mod.rs  routes.rs  state.rs
src/server/handlers/: experiments.rs  health.rs  jobs.rs  mod.rs  mutations.rs  store.rs  system.rs  workloads.rs
src/service/: check.rs  config.rs  experiment.rs  job.rs  mod.rs  mutations.rs  store.rs  test_utils.rs  types.rs  workload.rs
templates/configs/: example.json  racket.json  rocq.json
templates/scripts/: build.sh  cleanup.sh  steps.sh.j2
templates/tests/: bst.json  bst_ocaml.json  rbt.json  stlc.json  t1.json  t2.json
templates/workload/rocq/: QuickProp.json  TypeBasedFuzzer_test_runner.v
thesis-experiments/: .gitignore  README.md  etna-stlc-qcheck.sh  etna-stlc-rackcheck.sh  setup-etna.sh  tyche-stlc-qcheck.sh  tyche-stlc-rackcheck.sh
thesis-experiments/qcheck/: dune  gen_bespoke_qcheck.ml  impl.ml  runner_qcheck.ml  steps.json  stlc-ocaml.json  tyche_main.ml
thesis-experiments/rackcheck/: Generation.rkt  etna-stlc-rackcheck.sh  main-OG.rkt  main.rkt  steps.json  stlc-racket.json  tyche-stlc-rackcheck.sh
workloads/Haskell/: .gitignore  config.json
workloads/Haskell/BST/: config.json  etna-bst.cabal  etna-workload.cabal  marauder.toml  package.yaml  stack.yaml  steps.json
workloads/Haskell/RBT/: config.json  etna-rbt.cabal  package.yaml  stack.yaml
workloads/Haskell/STLC/: .gitignore  config.json  etna-stlc.cabal  package.yaml  stack.yaml
workloads/OCaml/: bst.json  config.json
workloads/OCaml/BST/: bst.json  notes.txt  steps.json
workloads/OCaml/RBT/: config.json  dune-project  marauder.toml  steps.json
workloads/OCaml/STLC/: config.json  dune-project  steps.json
workloads/Python/bst/: .gitignore  config.json  generation.py  impl.py  main-sampler.py  main.py  marauder.toml  pyproject.toml  sampling.py  spec.py  steps.json  steps.sh
workloads/Racket/: config.json  steps.json
workloads/Racket/BST/: config.json  main-sampler.rkt  main.rkt
workloads/Racket/RBT/: main-sampler.rkt  main.rkt  steps.json
workloads/Rocq/: config.json
workloads/Rust/: config.json  steps.json
workloads/Rust/BST/: Cargo.toml  config.json  main.rs  steps.json
workloads/Rust/BST/src/: implementation.rs  lib.rs  main.rs  main_sampler.rs  main_serialized.rs  spec.rs
workloads/Rust/BST/src/strategies/: bespoke.rs  mod.rs
workloads/Rust/rbt/: Cargo.toml  config.json  steps.json
workloads/Rust/rbt/src/: implementation.rs  main.rs  main_sampler.rs  main_serialized.rs  spec.rs
workloads/Rust/rbt/src/strategies/: bespoke.rs
workloads/Rust/stlc/: Cargo.toml  config.json  steps.json
workloads/Rust/stlc/src/: implementation.rs  lib.rs  main.rs  main_sampler.rs  main_serialized.rs  parser.rs  spec.rs
workloads/Rust/stlc/src/strategies/: bespoke.rs
(+472 files in other folders)
