[package]
name = "etna"
version = "0.1.1"
edition = "2021"
default-run = "etna"
repository = "https://github.com/alpaylan/etna-cli"

[dependencies]
ab_glyph = "0.2.30"
anyhow = "1.0.88"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
git2 = { version = "0.19.0", default-features = false, features = ["https", "vendored-openssl"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
imageproc = { version = "0.25.0", default-features = false }
itertools = { version = "0.14.0" }
jaq-core = { version = "1.5.1" }
jaq-interpret = { version = "1.5.0", default-features = false }
jaq-parse = { version = "1.0.3", default-features = false }
jaq-std = { version = "1.6.0", default-features = false }
marauders = { git = "https://github.com/alpaylan/marauders.git", branch = "main" }
minijinja = { version = "2.12.0", default-features = false, features = ["loader"] }
parse_duration = { version = "2.1.1", default-features = false }
process_control = { version = "5.0.0", default-features = false }
regex = "1.11.2"
serde = { version = "1.0.210", default-features = false }
serde-lexpr = "0.1.3"
serde_derive = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
serde_sexpr = { version = "0.1.0", default-features = false }
tabled = { version = "0.16.0", default-features = false, features = ["std"] }
tempfile = "3.20.0"
toml = { version = "0.8.19", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
rayon = "1.11.0"

[[bin]]
name = "etna"
path = "src/cli.rs"


[[bin]]
name = "etna-server"
path = "src/server.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
