[package]
name = "rbt"
version = "0.1.0"
edition = "2024"

[dependencies]
# quickcheck = { git = "https://github.com/alpaylan/quickcheck.git" , branch = "master" , features = ["etna"]}
quickcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck" , features = ["etna"]}
etna-rs-utils = { git = "https://github.com/alpaylan/etna-rs-utils", branch = "main" }
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = "0.1.3"

[[bin]]
name = "rbt"
path = "src/main.rs"

[[bin]]
name = "rbt-serialized"
path = "src/main_serialized.rs"

[[bin]]
name = "rbt-sampler"
path = "src/main_sampler.rs"
