[package]
name = "stlc"
version = "0.1.0"
edition = "2024"

[dependencies]
# quickcheck = { git = "https://github.com/alpaylan/quickcheck.git" , branch = "master" , features = ["etna"]}
quickcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck" , features = ["etna"]}
etna-rs-utils = { git = "https://github.com/alpaylan/etna-rs-utils", branch = "main" }
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = "0.1.3"
trace = "0.1.7"
serde_json = "1.0.141"

[[bin]]
name = "stlc"
path = "src/main.rs"

[[bin]]
name = "stlc-serialized"
path = "src/main_serialized.rs"

[[bin]]
name = "stlc-sampler"
path = "src/main_sampler.rs"
